--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -19,6 +19,11 @@
   weight = 30
 
 [[main]]
+  name = "Manuscripts and Work in Progress"
+  url = "#work_in_progress"
+  weight = 35
+
+[[main]]
   name = "Teaching"
   url = "#projects"
   weight = 40
