--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -88,16 +88,16 @@ show_related = {docs = false, page = false, post = false, project = false, publi
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "jinyoungjo@ucla.edu"
+email = "jinyoungjo@stanford.edu"
 phone = ""
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "3125 Campbell Hall", city = "Los Angeles", region = "CA", postcode = "90095", country = "United States", country_code = "US"}
+address = {street = "Margaret Jacks Hall, Building 460", city = "Stanford", region = "CA", postcode = "94305", country = "United States", country_code = "US"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
-coordinates = {latitude = "34.073655", longitude = "-118.441472"}
+coordinates = {latitude = "37.42862551029936", longitude = "-122.16934196243781"}
 
 # Directions for visitors to locate you.
 directions = ""
